<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/templatesFragment">

    <fragment
        android:id="@+id/templatesFragment"
        android:name="com.example.smp_help.ui.TemplatesFragment"
        android:label="@string/nav_templates"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_templatesFragment_to_subCategoryFragment"
            app:destination="@id/subCategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/subCategoryFragment"
        android:name="com.example.smp_help.ui.SubcategoryFragment"
        android:label="{sectionTitle}"
        tools:layout="@layout/fragment_list">
        <argument
            android:name="sectionIndex"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="sectionTitle"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/cheatSheetsFragment"
        android:name="com.example.smp_help.ui.CheatSheetsFragment"
        android:label="@string/nav_cheatsheets"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.smp_help.ui.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

</navigation>